--- a/src/View.fxml
+++ b/src/View.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
@@ -8,42 +9,50 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <Label layoutX="283.0" layoutY="8.0" prefHeight="28.0" prefWidth="84.0" text="Telefonkönyv" />
-      <SplitPane dividerPositions="0.281505728314239" layoutY="49.0" prefHeight="551.0" prefWidth="650.0">
-        <items>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
-               <children>
-                  <StackPane id="menuPane" fx:id="menuPane" layoutX="11.0" prefHeight="585.0" prefWidth="158.0" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="11.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-               </children>
-            </AnchorPane>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
-               <children>
-                  <Pane id="contactPane" fx:id="contactPane" layoutX="109.0" layoutY="50.0" prefHeight="610.0" prefWidth="436.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                  <Pane id="exportPane" fx:id="exportPane" prefHeight="610.0" prefWidth="436.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+<AnchorPane id="AnchorPane" fx:id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ViewController">
+    <children>
+        <Label layoutX="283.0" layoutY="8.0" prefHeight="28.0" prefWidth="84.0" text="Telefonkönyv" />
+        <SplitPane dividerPositions="0.281505728314239" layoutY="49.0" prefHeight="551.0" prefWidth="650.0">
+            <items>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                    <children>
+                        <StackPane id="menuPane" fx:id="menuPane" layoutX="11.0" prefHeight="585.0" prefWidth="158.0" AnchorPane.bottomAnchor="25.0" AnchorPane.leftAnchor="11.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                    </children>
+                </AnchorPane>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                    <children>
+                  <Pane id="exportPane" fx:id="exportPane" prefHeight="551.0" prefWidth="463.0">
                      <children>
-                        <TableView id="table" fx:id="table" prefHeight="393.0" prefWidth="442.0">
-                            <placeholder>
-                                <Label text="Nincs adat"/>
-                            </placeholder>
-                            <columns>
-                            <TableColumn prefWidth="75.0" text="C1" />
-                            <TableColumn prefWidth="75.0" text="C2" />
-                          </columns>
-                        </TableView>
-                        <TextField id="inputLastName" fx:id="inputLastName" layoutX="94.0" layoutY="411.0" prefHeight="25.0" prefWidth="184.0" promptText="Kovács" />
-                        <TextField id="inputFirstName" fx:id="inputFirstName" layoutX="94.0" layoutY="455.0" prefHeight="25.0" prefWidth="184.0" promptText="Béla" />
-                        <TextField id="inputEmail" fx:id="inputEmail" layoutX="94.0" layoutY="494.0" prefHeight="25.0" prefWidth="184.0" promptText="pelda@email.cim" />
-                        <Label alignment="CENTER_RIGHT" layoutX="26.0" layoutY="415.0" text="Vezetéknév" />
-                        <Label alignment="CENTER_RIGHT" layoutX="26.0" layoutY="459.0" prefHeight="17.0" prefWidth="61.0" text="Keresztnév" />
-                        <Label alignment="CENTER_RIGHT" layoutX="26.0" layoutY="498.0" prefHeight="17.0" prefWidth="61.0" text="E-mail" />
-                        <Button layoutX="317.0" layoutY="455.0" mnemonicParsing="false" text="Button" />
-                     </children>
-                  </Pane>
-               </children>
-            </AnchorPane>
-        </items>
-      </SplitPane>
-   </children>
+                        <Button id="exportButton" fx:id="exportButton" layoutX="188.0" layoutY="230.0" mnemonicParsing="false" text="PDF mentése" />
+                        <TextField id="inputExport" fx:id="inputExport" layoutX="114.0" layoutY="182.0" prefHeight="25.0" prefWidth="235.0" />
+                        <Label layoutX="206.0" layoutY="152.0" text="Fájl neve:" />
+                        <Label layoutX="118.0" layoutY="35.0" text="Exportálás PDF-be">
+                           <font>
+                              <Font size="28.0" />
+                           </font>
+                        </Label>
+                     </children></Pane>
+                        <Pane id="contactPane" fx:id="contactPane" prefHeight="610.0" prefWidth="436.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                            <children>
+                                <TableView id="table" fx:id="table" editable="true" prefHeight="393.0" prefWidth="442.0">
+                                    <placeholder>
+                                        <Label text="Nincs adat" />
+                                    </placeholder>
+                                    <columns>
+                                    </columns>
+                                </TableView>
+                                <TextField id="inputLastName" fx:id="inputLastName" layoutX="94.0" layoutY="411.0" prefHeight="25.0" prefWidth="184.0" promptText="Kovács" />
+                                <TextField id="inputFirstName" fx:id="inputFirstName" layoutX="94.0" layoutY="455.0" prefHeight="25.0" prefWidth="184.0" promptText="Béla" />
+                                <TextField id="inputEmail" fx:id="inputEmail" layoutX="94.0" layoutY="494.0" prefHeight="25.0" prefWidth="184.0" promptText="pelda@email.cim" />
+                                <Label alignment="CENTER_RIGHT" layoutX="26.0" layoutY="415.0" text="Vezetéknév" />
+                                <Label alignment="CENTER_RIGHT" layoutX="26.0" layoutY="459.0" prefHeight="17.0" prefWidth="61.0" text="Keresztnév" />
+                                <Label alignment="CENTER_RIGHT" layoutX="26.0" layoutY="498.0" prefHeight="17.0" prefWidth="61.0" text="E-mail" />
+                                <Button layoutX="317.0" layoutY="455.0" mnemonicParsing="false" text="Button" />
+                            </children>
+                        </Pane>
+                    </children>
+                </AnchorPane>
+            </items>
+        </SplitPane>
+    </children>
 </AnchorPane>
