--- a/src/View.fxml
+++ b/src/View.fxml
@@ -2,12 +2,8 @@
 
 <?import javafx.scene.text.*?>
 <?import javafx.scene.control.*?>
-<?import java.lang.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
+
 
 <AnchorPane id="AnchorPane" fx:id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ViewController">
     <children>
@@ -47,7 +43,7 @@
                                 <Label alignment="CENTER_RIGHT" layoutX="26.0" layoutY="415.0" text="Vezetéknév" />
                                 <Label alignment="CENTER_RIGHT" layoutX="26.0" layoutY="459.0" prefHeight="17.0" prefWidth="61.0" text="Keresztnév" />
                                 <Label alignment="CENTER_RIGHT" layoutX="26.0" layoutY="498.0" prefHeight="17.0" prefWidth="61.0" text="E-mail" />
-                                <Button layoutX="317.0" layoutY="455.0" mnemonicParsing="false" text="Button" />
+                                <Button id="addNewContactButton" fx:id="addNewContactButton" onAction="#addContact" layoutX="296.0" layoutY="455.0" mnemonicParsing="false" text="Új kontakt hozzáadása" />
                             </children>
                         </Pane>
                     </children>
